# webframework

./: .gitignore  .travis.yml  .zappr.yaml  Cargo.toml  README.md
examples/: explicit.rs
src/: error.rs  lib.rs  prelude.rs  request.rs  request_filters.rs  response.rs  router.rs  server.rs
tests/: macro.rs
todo-example/: Cargo.toml  database.sqlite
todo-example/migrations/2018-11-26-204512_create_tasks_table/: up.sql
todo-example/src/: controller.rs  database.rs  main.rs  models.rs  schema.rs  views.rs
webframework/: Cargo.toml  README.md
webframework-core/: Cargo.toml
webframework-core/src/: error.rs  form.rs  lib.rs  request.rs  request_filter.rs  response.rs  router.rs
webframework-derive/: Cargo.toml  LICENSE
webframework-derive/src/: lib.rs
webframework-template/: Cargo.toml
webframework/examples/: explicit.rs
webframework/src/: error.rs  lib.rs  prelude.rs  request_filter.rs  request_filters.rs  server.rs  templates.rs
webframework/tests/: macro.rs  nested_router.rs
