[package]
authors = ["Marcel Müller <neikos@neikos.email>"]
categories = ["web-programming", ""]
description = "An extensible webframework, its main purpose is to be: safe, fun, fast."
edition = "2018"
homepage = "https://github.com/webframework-rs/webframework"
keywords = ["webframework", "fun"]
license = "MIT"
name = "webframework"
readme = "README.md"
repository = "https://github.com/webframework-rs/webframework"
version = "0.0.1"

[badges]

[badges.maintenance]
status = "actively-developed"

[dependencies]
failure = "0.1.3"
futures = "0.1.25"
http = "0.1.13"
hyper = "0.12.14"
lazy_static = "1.2.0"
regex = "1.0.6"
slog = "2.4.1"
slog-async = "2.3.0"
slog-term = "2.4.0"

[dependencies.uuid]
features = ["v4"]
version = "0.7"

[dependencies.webframework-derive]
optional = false
path = "webframework-derive/"
version = "0.0.1"
