[package]
authors = ["Marcel Müller <neikos@neikos.email>"]
edition = "2018"
name = "todo-example"
version = "0.1.0"

[dependencies]
failure = "0.1.3"
futures = "0.1.25"
horrorshow = "0.6.4"
lazy_static = "1.2.0"
regex = "1.0.6"

[dependencies.webframework]
optional = false
path = "../webframework"

[dependencies.webframework-core]
optional = false
path = "../webframework-core/"

[dependencies.diesel]
version = "1.3.3"
features = ["sqlite", "r2d2"]
