[package]
authors = ["Marcel Müller <neikos@neikos.email>"]
edition = "2018"
name = "todo-example"
version = "0.1.0"

[dependencies]
failure = "0.1.3"
futures = "0.1.25"
horrorshow = "0.6.4"
lazy_static = "1.2.0"
regex = "1.0.6"
serde = "1.0.80"
serde_derive = "1.0.80"

[dependencies.diesel]
features = ["sqlite", "r2d2"]
version = "1.3.3"

[dependencies.webframework]
optional = false
path = "../webframework"

[dependencies.webframework-core]
optional = false
path = "../webframework-core/"
