[package]
authors = ["Marcel Müller <neikos@neikos.email>"]
edition = "2018"
name = "webframework-core"
version = "0.0.1"

[dependencies]
bytes = "0.4.11"
failure = "0.1.3"
futures = "0.1.25"
http = "0.1.14"
hyper = "0.12.16"
serde = "1.0.80"
serde_urlencoded = "0.5.4"
slog = "2.4.1"
url = "1.7.2"
uuid = "0.7.1"
